[gd_scene load_steps=4 format=3 uid="uid://weapon_display_hud"]

[ext_resource type="Script" path="res://scripts/ui/weapon_display_hud.gd" id="1_display_hud"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_slot"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.5, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_label"]
bg_color = Color(0.1, 0.1, 0.1, 0.6)

[node name="WeaponDisplayHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_display_hud")

[node name="WeaponSlotsContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -180.0
offset_right = 340.0
offset_bottom = -20.0
grow_vertical = 0

[node name="Slot1Panel" type="Panel" parent="WeaponSlotsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 160)
theme_override_styles/panel = SubResource("StyleBoxFlat_slot")

[node name="WeaponLabel" type="Label" parent="WeaponSlotsContainer/Slot1Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -40.0
offset_right = -10.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_label")
text = "[Slot 1]
Empty"
horizontal_alignment = 1
vertical_alignment = 2

[node name="WeaponVisual" type="Control" parent="WeaponSlotsContainer/Slot1Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Slot2Panel" type="Panel" parent="WeaponSlotsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 160)
theme_override_styles/panel = SubResource("StyleBoxFlat_slot")

[node name="WeaponLabel" type="Label" parent="WeaponSlotsContainer/Slot2Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -40.0
offset_right = -10.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_label")
text = "[Slot 2]
Empty"
horizontal_alignment = 1
vertical_alignment = 2

[node name="WeaponVisual" type="Control" parent="WeaponSlotsContainer/Slot2Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

